--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCooking">
-        <activity android:name=".SearchActivity"></activity>
-        <activity android:name=".loadmain">
+        <activity android:name=".Model.SearchActivity"></activity>
+        <activity android:name=".Model.loadmain">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".Model.MainActivity"></activity>
     </application>
 
 </manifest>
