--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,13 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     implementation 'me.gujun.android.taggroup:library:1.4'
+
+    compile files('libs/YouTubeAndroidPlayerApi.jar')
+    //noinspection GradleCompatible
+    implementation 'com.android.support:recyclerview-v7:25.1.1'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+
+    implementation 'com.android.volley:volley:1.2.0'
+
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 }
