--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,26 +3,24 @@
     package="com.example.appcooking">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <queries>
         <intent>
             <action android:name="com.google.android.youtube.api.service.START" />
         </intent>
     </queries>
-    <application
 
+    <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCooking">
-        <activity android:name=".Model.PlayVideoActivity"></activity>
-        <activity android:name=".Model.VideoActivity">
-
-        </activity>
-
+        <activity android:name=".Model.Search2Activity"></activity>
+        <activity android:name=".Model.PlayVideoActivity" />
+        <activity android:name=".Model.VideoActivity"></activity>
         <activity android:name=".Model.DentailActivity" />
-        <activity android:name=".Model.SearchActivity" />
         <activity android:name=".Model.loadmain">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
