--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,38 +1,38 @@
 plugins {
     id 'com.android.application'
+
 }
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.3"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.3"
 
     defaultConfig {
         applicationId "com.example.appcooking"
-        minSdkVersion 16
-        targetSdkVersion 30
+        minSdkVersion 19
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
     }
 
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+
         }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+
     }
 }
 
 dependencies {
-
-
-
-
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
@@ -42,8 +42,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     implementation 'me.gujun.android.taggroup:library:1.5'
-
-    compile files('libs/YouTubeAndroidPlayerApi.jar')
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    compile files('libs/YouTubeAndroidPlayerApi-1.2.2.jar')
     //noinspection GradleCompatible
     implementation 'com.android.support:recyclerview-v7:25.1.1'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
@@ -51,4 +51,5 @@ dependencies {
     implementation 'com.android.volley:volley:1.2.0'
 
     implementation 'com.squareup.picasso:picasso:2.5.2'
+
 }
