--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,8 @@
 # org.gradle.parallel=true
 #Tue Jul 06 13:00:15 ICT 2021
 android.enableJetifier=true
-
 android.useAndroidX=true
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding\=UTF-8
+android.enableUnitTestBinaryResources=true
+android.overridePathCheck=true
 
